--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
@@ -1,9 +1,9 @@
 ## 功能介绍
 该功能可以帮助您管理 EMR 集群中的用户，本文将为您介绍用户管理的相关操作。
 >!
-1. 目前仅 EMR-V2.6.0 和 EMR-V3.2.1 版本支持用户管理功能。
-2. 需要手动触发 ranger-ugsync-site.xml 的配置下发，用户同步才能生效。
-3. 删除用户、重置密码可能导致正在运行的任务失败。
+- 目前仅 EMR-V2.6.0 和 EMR-V3.2.1 版本支持用户管理功能。
+- 需要手动触发 ranger-ugsync-site.xml 的配置下发，用户同步才能生效。
+- 删除用户、重置密码可能导致正在运行的任务失败。
 
 ## 操作步骤
 1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
