--- a/product/数据库/图数据库EasyGraph/快速入门/初始化.md
+++ b/product/数据库/图数据库EasyGraph/快速入门/初始化.md
@@ -2,8 +2,8 @@
 
 ## 操作步骤
 1. 登录 [KonisGraph 控制台](https://console.cloud.tencent.com/konisgraph)，选择对应地域后，在实例列表，选择刚创建的的实例，在**操作**列单击**管理**。
-2. 在**帐号管理**页面，重置默认账号的密码，请参见 [重置密码](https://cloud.tencent.com/document/##################################)。
+2. 在**帐号管理**页面，重置默认账号的密码，请参见 [重置密码]()。
 3. 返回实例列表，实例状态为**运行中**，即可正常使用。
 
 ## 后续操作
-通过 Windows 云服务器或 Linux 云服务器，连接图数据库 KonisGraph，请参见 【连接 KonisGraph 实例】。
+通过 Windows 云服务器或 Linux 云服务器，连接图数据库 KonisGraph，请参见  [连接 KonisGraph 实例](https://cloud.tencent.com/document/product/1366/61174)。
