--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/设置引导操作.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/设置引导操作.md
@@ -13,23 +13,23 @@ EMR 实例的生产流程分为以下几个步骤：
 
 ## 操作步骤
 **方法一：在 [购买页](https://buy.cloud.tencent.com/emapreduce#/) 创建集群时添加引导操作。**
-1. 选择【基础配置】>【高级设置】>【添加引导操作】，即可添加引导操作。
+1. 选择**基础配置 > 高级设置 > 添加引导操作**，即可添加引导操作。
 ![](https://main.qcloudimg.com/raw/6072b0738313a0318099b44671254d7b.png)
 2. 添加引导操作完成支持编辑与删除操作。
  - 选择运行时机，并填写相关参数。
  - 名称：建议与您的“对象名称”保持一致。
- - 脚本位置：建议从 COS 详情页进行复制。进入 [COS 控制台](https://console.cloud.tencent.com/cos5)，单击【存储桶列表】，选择您需要的脚本，然后选择【操作】>【详情】。
+ - 脚本位置：建议从 COS 详情页进行复制。进入 [COS 控制台](https://console.cloud.tencent.com/cos5)，单击**存储桶列表**，选择您需要的脚本，然后选择**操作 > 详情**。
 ![](https://main.qcloudimg.com/raw/49dbc663c646f07c22431965a5f266be.png)
 在详情页，即可看到“对象名称”和“对象地址”。
 ![](https://main.qcloudimg.com/raw/215f2620a49d7b17be7510a92db6209b.png)
  - 参数：执行脚本的参数。不同的参数以空格分割，参数中不能有空格，“参数”和“脚本名”之和小于240个字符。
 
 **方法二：在集群【基本信息】页添加引导操作**
-1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的集群【ID/名称】进入集群详情页。然后选择【基本信息】>【引导操作】，单击【添加引导操作】，即可添加引导操作。
+1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。然后选择**基本信息 > 引导操作**，单击**添加引导操作**，即可添加引导操作。
 2. 添加引导操作完成支持编辑与删除操作。
  - 选择运行时机，并填写相关参数。
  - 名称：建议与您的“对象名称”保持一致。
- - 脚本位置：建议从 COS 详情页进行复制。进入 [COS 控制台](https://console.cloud.tencent.com/cos5)，单击【存储桶列表】，选择您需要的脚本，然后选择【操作】>【详情】。
+ - 脚本位置：建议从 COS 详情页进行复制。进入 [COS 控制台](https://console.cloud.tencent.com/cos5)，单击**存储桶列表**，选择您需要的脚本，然后选择**操作 > 详情**。
 ![](https://main.qcloudimg.com/raw/49dbc663c646f07c22431965a5f266be.png)
 ![](https://main.qcloudimg.com/raw/215f2620a49d7b17be7510a92db6209b.png)
  - 参数：执行脚本的参数。不同的参数以空格分割，参数中不能有空格，“参数”和“脚本名”之和小于240个字符。
