--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/04 查看监控.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/04 查看监控.md
@@ -6,10 +6,9 @@
 
 1. 登录 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)。
 2. 在左侧导航栏选择**队列服务**，选好好**地域**后，单击目标队列服务的“ID”，进入队列详情页面。
-
 3. 在消息详情页面，选择页面上方的**监控**页签，选择好时间范围后可看到该队列的监控数据。
 
-监控指标说明
+监控指标说明：
 
 | 监控指标             | 说明                                                         |
 | -------------------- | ------------------------------------------------------------ |
