--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/集群标签.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/集群标签.md
@@ -15,7 +15,7 @@
 
 ## 操作步骤
 ### 对集群编辑标签
-1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】页面中，选择需要编辑标签的集群，单击顶部的【更多操作】>【编辑标签】。如下图所示：
+1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，在集群列表页面中，选择需要编辑标签的集群，单击顶部的**更多操作 > 编辑标签**。如下图所示：
 ![](https://main.qcloudimg.com/raw/2a283acaf4d2bc3436608eb5d06a0a41.png)
 2. 在弹出的“您已经选择2个云资源”窗口中，根据实际需求进行添加、修改或者删除标签。
 >?最多支持对20个集群进行标签的批量编辑操作。
@@ -23,7 +23,7 @@
 ![](https://main.qcloudimg.com/raw/4f46dbe5462f83bb8a7903d7e70c231b.png)
 
 ### 对节点编辑标签
-1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，单击集群【ID/名称】进入集群详情页面。在集群详情页面中，选择【集群资源】>【资源管理】，然后选择需要编辑标签的节点资源，选择【更多操作】>【编辑标签】。如下图所示：
+1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，单击集群 **ID/名称**进入集群详情页面。在集群详情页面中，选择**集群资源 > 资源管理**，然后选择需要编辑标签的节点资源，选择**更多操作 > 编辑标签**。如下图所示：
 ![](https://main.qcloudimg.com/raw/b77d82ef2bb7eaebc649ad797f4a7cc5.png)
 2. 在弹出的“您已经选择2个云资源”窗口中，根据实际需求进行添加、修改或者删除标签。
 >?最多支持对20个集群进行标签的批量编辑操作。
