--- a/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
@@ -12,7 +12,7 @@
 ## 配置指南
 ### 查看配置
 登录 [CDN 控制台](https://console.cloud.tencent.com/cdn)，在菜单栏里选择【域名管理】，单击域名右侧【管理】，即可进入域名配置页面，在【高级配置】中可看到带宽封顶配置，默认情况下配置为关闭状态：
-![](https://main.qcloudimg.com/raw/25e10fc930c41828487acff1590fd148.png)
+![](https://main.qcloudimg.com/raw/c9e04c0d8d6e248bfa0e0024055ee3de.png)
 ### 修改配置
 #### 1. 修改配置
 单击开启配置开关，进行具体配置：
@@ -26,7 +26,7 @@
 
 >! 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此会有一定的生效延迟。
 
-![](https://main.qcloudimg.com/raw/e06af43f5fbdaf5f0a77d7b532e6d0dd.png)
+<img src="https://main.qcloudimg.com/raw/d0978322fe6d6c18d0bd9b1f496fcfbf.png" width=60%> </img>
 
 #### 2. 关闭配置
 您可以通过带宽封顶开关，一键关闭配置，开关为关闭状态时，即便下方存在已有配置，仍不会现网生效，下次单击开启时，会先行进行配置的二次确认，不会立即发布至全网生效：
