--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/05 消息回溯.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/05 消息回溯.md
@@ -5,7 +5,9 @@
 ## 功能说明
 
 ![](//mc.qcloudimg.com/static/img/5c1699ab442ad36b7e34a091bbcf089d/image.jpg)
-如上图，消息的生命周期为蓝色框内的片段。开启消息回溯能力后，已被消费者消费且确认删除的消息会进入**消息可回溯**区域，CMQ 后端还会保存该信息。但消息超过 Queue 的消息生命周期时（假设为1天），达到生命周期后，该消息会自动删除，不可回溯。具体产品逻辑如下：
+如上图，消息的生命周期为蓝色框内的片段。开启消息回溯能力后，已被消费者消费且确认删除的消息会进入**消息可回溯**区域，CMQ 后端还会保存该信息。但消息超过 Queue 的消息生命周期时（假设为1天），达到生命周期后，该消息会自动删除，不可回溯。
+
+### 产品逻辑
 
 - **开启：**若未开启消息回溯能力，则消费者已消费且确认删除的消息会立即删除。开启该功能时，须指定回溯的可回溯周期，可回溯周期的范围必须小于等于消息的生命周期。
 
@@ -29,13 +31,13 @@
 
 1. 最远可回溯时间点 = current_time - rewind_seconds（消息回溯保留周期）
 2. 最近可回溯时间点 = min_msg_time （队列最小未消费消息）
-3. 最远时间点 <= start_consume_time <= 最近时间点
+3. 最远时间点 ≤ start_consume_time ≤ 最近时间点
 
 ## 应用场景
 
 此功能便于核心金融业务做业务对账、业务系统重试等操作。
 
-## 案例
+## 典型案例
 
 这里结合一个场景来描述消息回溯的使用：
 
@@ -43,13 +45,13 @@
 
 如果出现了异常，例如 B 业务虽然进行了消费，但是在一段时间内消费情况都出现了异常。这时，已经删除的消息已经被删除，无法重新消费，会对业务造成影响，且需要暂停 B 业务，等开发运维人员修复 Bug 之后才能重新上线 B 业务。而且运维人员也无法实时监控 B 业务的情况，等到发现异常场景，可能已经过去一段时间。
 
-为了防止这种情况出现，A 业务需要关心 B 业务的处理情况，需要对生产消息进行备份，确保B 业务正常才能删除备份，保证现网正常。
+为了防止这种情况出现，A 业务需要关心 B 业务的处理情况，需要对生产消息进行备份，确保 B 业务正常才能删除备份，保证现网正常。
 
 这种情况下，您可以使用 **消息回溯** 的功能，开发人员对 B 业务进行修复，然后根据 B 业务消费正常的最近一个时间点，将消息回溯到该时间点。这时候，B 业务获取到的消息就会从指定的时间点开始，A 业务完全不用关心 B 业务的异常情况。这里 B 需要注意要对消费进行幂等处理。
 
 ### 开启消息回溯功能
 
-在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)新建队列的时候，您可以开启消息回溯功能。
+在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue) 新建队列的时候，您可以开启消息回溯功能。
 
 ![](https://main.qcloudimg.com/raw/ec85b1ce8cadb8c096acbbc3972ff887.png)
 
