--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据分析.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据分析.md
@@ -1,25 +1,24 @@
 本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何新建图数据分析。
 
-## 图数据分析概述
 **图数据分析**无需连接图数据库 KonisGraph 实例，可导入离线数据或之前导出的图数据分析文件；然后对本次导入的图数据文件（点边数据和渲染显示布局等），进行可视化渲染和分析。图分析完毕后，可导出图数据分析文件以供后续再次导入**图数据分析**继续使用，或导出图片。
 
 ## 新建图数据分析
 1. 登录 [图数据管理平台](https://cloud.tencent.com/document/product/1366/61194#dltsjk)，单击顶部导航的**图分析**，单击左侧导航栏上方的**+新建**。
-![](https://main.qcloudimg.com/raw/e67ee9da61c7100bfcfe143526080376.png)
+![](https://main.qcloudimg.com/raw/f89dc100d9de7ff89b2073755e001666.png)
 2. 在新建图分析对话框，用户可选择**图数据分析**，选择适合的**数据类型**，**导入图数据文件**单击**下一步**。
->?图数据分析当前支持的文件类型参照 [图数据分析的文件类型]()。
+>?图数据分析当前支持的文件类型参照 [图数据分析的文件类型](#tsjfxdwjlx)。
 >
 <img src="https://main.qcloudimg.com/raw/e33498049bd40dc8821792bcda9d064a.png"  style="zoom:80%;">
 3. 预览图数据文件的点边数据，单击**确定**，即可从左侧导航栏的**图数据分析**，查看图数据分析任务创建成功。
 ![](https://main.qcloudimg.com/raw/f0ab4cbec53ad75d8bbaa62fc44a608e.png)
 
-### 图数据分析的文件类型
+## [图数据分析的文件类型](id:tsjfxdwjlx)
 图数据分析当前支持的文件类型，如下：
 - CSV：Gremlin（CSV）文件格式。
 - JSON：一种特定 JSON 格式的描述图的文件。
 - GEXF：[Gephi](https://gephi.org/) 图分析软件生成的简单图文件（当前不支持动态图），[GEXF 参考文档](https://gephi.org/gexf/1.2draft/gexf-12draft-primer.pdf) 。
 
-#### CSV 文件（Node Edge List）
+### CSV 文件（Node Edge List）
 使用 CSV 格式加载 Apache TinkerPop Gremlin 数据，须将顶点和边分别放到单独的文件。
 
 Gremlin CSV 格式遵循 RFC 4180 CSV 规范，更多信息请参考 [CSV 文件的一般格式和 MIME 类型](https://datatracker.ietf.org/doc/html/rfc4180?spm=a2c4g.11186623.2.7.36f46d84aFdUEZ)。
@@ -29,7 +28,7 @@ Gremlin CSV 格式遵循 RFC 4180 CSV 规范，更多信息请参考 [CSV 文件
 >?标题行是数据文件的第一行，由 \n 或 \r\n 结束，行内部不支持使用双引号、行换符等特殊字符，除分隔符逗号(,)外的其余字符均被解析为标题内容。
 >
 
-##### 系统列标题
+#### 系统列标题
 顶点文件和边文件的系统列标题不同，每个系统列在标题中只能出现一次，所有标签都是字符串类型，并且区分大小写。
 
 1. 顶点标题
@@ -54,7 +53,7 @@ Gremlin CSV 格式遵循 RFC 4180 CSV 规范，更多信息请参考 [CSV 文件
 | | color | N | 边的颜色 |
 | | size | N | 边的大小 |
 
-##### 属性列标题
+#### 属性列标题
 可通过以下语法指定属性列，类型名称不区分大小写，列标题中不允许使用空格，因此，属性名称也不能包含空格，属性不支持 List 和 Set 数据类型，只能有一个值。
 ```
 attribute:type
@@ -80,7 +79,7 @@ age:int
 |字符串|string|双引号是可选的，字符串中如果包含逗号(,)、换行(\r\n或\n)，双引号(“)等特殊字符，需要使用双引号(“)括起来。示例：“Hello,World”|
 
 
-##### 示例
+#### 示例
 node.csv
 ```
 ~id,~label,name:string,lang:string,age:int
@@ -126,11 +125,11 @@ edge.csv
 |12|6|3|created|0.2|
 
 
-#### CSV （Edge List）
+### CSV （Edge List）
 与上述 CSV 格式相似，但仅需提供 Edge List CSV 一个文件即可，系统将根据边的 source 和 target 自动生成点列表。
 
-#### JSON
-##### JSON 配置项
+### JSON
+#### JSON 配置项
 
 |名称|类型|必选|描述|
 | :--------- | :----- | :---------- | :----- |
@@ -140,7 +139,7 @@ edge.csv
 |nodes|Object[]|Y|点集合|
 |edges|Object[]|Y|边集合|
 
-##### Node 配置项
+#### Node 配置项
 
 |名称|类型|必选|描述|
 | :--------- | :----- | :---------- | :----- |
@@ -152,7 +151,7 @@ edge.csv
 |y|Number|N|y坐标|
 |attributes|Object|N|点自定义属性|
 
-##### Edge 配置项
+#### Edge 配置项
 
 |名称|类型|必选|描述|
 | :--------- | :----- | :---------- | :----- |
@@ -164,7 +163,7 @@ edge.csv
 |size|Number|N|边宽度|
 |attributes|Object|N|边自定义属性|
 
-##### 示例
+#### 示例
 ```
 {
     // Graph 声明可选属性
@@ -204,7 +203,7 @@ edge.csv
 ```
 
 ## 图分析操作
-1. 图的可视化渲染分析的绘图区和显示设置操作，参考 [图可视化分析交互]()。
+1. 图的可视化渲染分析的绘图区和显示设置操作，参考 [图可视化分析交互](https://cloud.tencent.com/document/product/1366/61218)。
 2. 在完成本次图分析时，可导出图数据分析文件以供后续导入**图数据分析**继续使用，或导出图片。
 >!图分析网页被重新加载或关闭，图分析页面和数据查询结果不会被保存。用户需保存留用的图分析页面（数据和渲染显示布局等），请导出图数据分析文件以供后续再次导入**图数据分析**即可继续使用。
 >
