--- a/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
@@ -1852,6 +1852,107 @@ if (cos_status_is_ok(s)) {
 cos_pool_destroy(p); 
 ```
 
+
+## 修改存储类型
+
+#### 功能说明
+
+修改对象的存储类型。
+
+#### 方法原型
+
+```cpp
+cos_status_t *cos_copy_object(const cos_request_options_t *options,
+                              const cos_string_t *src_bucket,
+                              const cos_string_t *src_object,
+                              const cos_string_t *src_endpoint,
+                              const cos_string_t *dest_bucket, 
+                              const cos_string_t *dest_object,
+                              cos_table_t *headers,
+                              cos_copy_object_params_t *copy_object_param,
+                              cos_table_t **resp_headers);
+```
+
+#### 参数说明
+
+| 参数名称     | 参数描述                                                     | 类型   |
+| ------------ | ------------------------------------------------------------ | ------ |
+| options      | COS 请求选项                                                 | Struct |
+| src_bucket       | 源存储桶名称，存储桶的命名格式为 BucketName-APPID，此处填写的存储桶名称必须为此格式                             | String |
+| src_object       | 源Object 名称                                                 | String |
+| src_endpoint     | 源endpoint 域名                                                 | String |
+| dest_bucket      | 目的存储桶名称，存储桶的命名格式为 BucketName-APPID，此处填写的存储桶名称必须为此格式                           | String |
+| dest_object      | 目的Object 名称                | String |
+| headers          | 请求添加的头域                  | Struct |
+| copy_object_param | 对象拷贝参数，包括etag和last_modify                                        | Struct |
+| resp_headers     | 返回 HTTP 响应消息的头域                                                 | Struct |
+
+#### 返回结果说明
+
+| 返回结果   | 描述        | 类型   |
+| ---------- | ----------- | ------ |
+| code       | 错误码      | Int    |
+| error_code | 错误码内容  | String |
+| error_msg  | 错误码描述  | String |
+| req_id     | 请求消息 ID | String |
+
+#### 示例
+
+```cpp
+cos_pool_t *p = NULL;
+int is_cname = 0;
+cos_status_t *s = NULL;
+cos_request_options_t *options = NULL;
+cos_string_t bucket;
+cos_string_t object;
+cos_string_t src_bucket;
+cos_string_t src_object;
+cos_string_t src_endpoint;
+cos_table_t *resp_headers = NULL;
+
+//创建内存池
+cos_pool_create(&p, NULL);
+
+//初始化请求选项
+options = cos_request_options_create(p);
+options->config = cos_config_create(options->pool);
+cos_str_set(&options->config->endpoint, TEST_COS_ENDPOINT);
+cos_str_set(&options->config->access_key_id, TEST_ACCESS_KEY_ID);
+cos_str_set(&options->config->access_key_secret, TEST_ACCESS_KEY_SECRET);
+cos_str_set(&options->config->appid, TEST_APPID);
+options->config->is_cname = is_cname;
+options->ctl = cos_http_controller_create(options->pool, 0);
+cos_str_set(&bucket, TEST_BUCKET_NAME);
+//源对象和目的对象一致
+cos_str_set(&object, "test.txt");
+cos_str_set(&src_object, "test.txt");
+cos_str_set(&src_bucket, TEST_BUCKET_NAME);
+cos_str_set(&src_endpoint, TEST_COS_ENDPOINT);
+
+// 设置x-cos-metadata-directive和x-cos-storage-class头域，替换为自己要更改的存储类型
+cos_table_t *headers = cos_table_make(p, 2);
+apr_table_add(headers, "x-cos-metadata-directive", "Replaced");
+// 存储类型包括NTELLIGENT_TIERING，MAZ_INTELLIGENT_TIERING，STANDARD_IA，ARCHIVE，DEEP_ARCHIVE
+apr_table_add(headers, "x-cos-storage-class", "ARCHIVE");
+
+//拷贝对象， 设置存储类型
+cos_copy_object_params_t *params = NULL;
+params = cos_create_copy_object_params(p);
+s = cos_copy_object(options, &src_bucket, &src_object, &src_endpoint, & bucket, &object, headers, params, &resp_headers);
+if (cos_status_is_ok(s)) {
+    printf("copy object succeeded\n");
+} else {
+    printf("copy object failed\n");
+}
+
+//销毁内存池
+cos_pool_destroy(p); 
+```
+
+注意：标准存储可以转换到归档存储和深度归档存储，如果希望将归档存储或深度归档存储的对象转换为其他存储类型，需要首先使用cos_post_object_restore()将归档存储或深度归档存储的对象回热，才能使用该接口请求转换存储类型；关于存储类型详细说明请参见 [存储类型概述](https://cloud.tencent.com/document/product/436/33417)。
+
+
+
 ## 高级接口（推荐）
 
 ### 上传对象（断点续传）
