--- a/product/大数据与AI/智能合同审核/产品简介/产品优势.md
+++ b/product/大数据与AI/智能合同审核/产品简介/产品优势.md
@@ -6,4 +6,4 @@
 - 腾讯云文本信息抽取技术是基于业界领先的深度学习模型，并进一步构建知识增强模型，进一步提升模型效果。
 
 ### 法稳定性强
-腾讯云的 OCR NLP 技术已在公司内外部多个客户场景中使用，服务了广大客户，接受过海量数据和用户的考验，可以保持长期的高可用性和稳定性。
+腾讯云的 OCR、NLP 技术已在公司内外部多个客户场景中使用，服务了广大客户，接受过海量数据和用户的考验，可以保持长期的高可用性和稳定性。
