--- a/product/安全服务/身份安全/多因子验证/产品简介/应用场景.md
+++ b/product/安全服务/身份安全/多因子验证/产品简介/应用场景.md
@@ -10,4 +10,4 @@
 适配市场上常见网关设备，提供可视化配置，提供多因子认证网络登录页面，支持多种认证方式，安全便捷。
 
 ### 数据中心基础设施账号安全
-随着数据中心环境越来越复杂，安全事件频繁爆发，数据中心基础设施账号安全成为关键挑战。MFAS 服务支持与服务器、KVM、堡垒机、防火墙、WAF、路由器、交换机及云基础设施快速对接，一键安装插件，快速完成配置，实现高安全的身份认证。
+随着数据中心环境越来越复杂，安全事件频繁爆发，数据中心基础设施账号安全成为关键挑战。MFAS 支持与服务器、KVM、堡垒机、防火墙、WAF、路由器、交换机及云基础设施快速对接，一键安装插件，快速完成配置，实现高安全的身份认证。
