--- a/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
+++ b/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
@@ -37,7 +37,7 @@ APM 服务器接收失败的请求，视为失败请求。
 
 服务可用性按服务周期统计，按照如下方式计算：
 
-服务可用性 =（1 -（服务周期内∑每5分钟错误率/服务周期内5分钟总个数））× 100%
+服务可用性 =（1 –（服务周期内∑每5分钟错误率/服务周期内5分钟总个数））× 100%
 
 （注：服务周期内5分钟总个数 = 12 × 24 × 该服务周期的天数）
 
@@ -65,7 +65,7 @@ APM 服务器接收失败的请求，视为失败请求。
 
 （1）如某服务月度没有达到服务可用性标准，您可以在没有达标的相应服务月度结束后的次月的第五（5）个工作日后，**仅通过您相应账户的工单系统提出赔偿申请。**您提出赔偿申请后腾讯云会进行相应核实，对于服务月度的服务可用性的计算，若双方出现争议的，**双方均同意最终以腾讯云的后台记录为准。**
 
-（2）**您最晚提出赔偿申请的时间不应超过未达标的相应服务月度结束后六十（60）个自然日**，。如果您在未达标的相应服务月度结束后的六十（60）日内未提出赔偿申请或者在未达标的相应服务月度结束后的六十（60）日之后才提出赔偿申请或者您通过非本协议约定的方式提出申请的，均视为您自动放弃要求赔偿的权利及向腾讯云主张其他权利的权利，腾讯云有权不受理您的赔偿申请，不对您进行任何赔偿或补偿。
+（2）**您最晚提出赔偿申请的时间不应超过未达标的相应服务月度结束后六十（60）个自然日**。如果您在未达标的相应服务月度结束后的六十（60）日内未提出赔偿申请或者在未达标的相应服务月度结束后的六十（60）日之后才提出赔偿申请或者您通过非本协议约定的方式提出申请的，均视为您自动放弃要求赔偿的权利及向腾讯云主张其他权利的权利，腾讯云有权不受理您的赔偿申请，不对您进行任何赔偿或补偿。
 
 ## 4.  免责条款
 
