--- a/product/域名与网站/域名注册/腾讯云域名特惠包.md
+++ b/product/域名与网站/域名注册/腾讯云域名特惠包.md
@@ -9,7 +9,7 @@
 登录 [域名特惠包购买页](https://buy.cloud.tencent.com/packs)，即可购买域名特惠包。
 - 域名特惠包购买成功后，即可前往 [费用中心](https://console.cloud.tencent.com/expense/invoice) 开具相应等额发票。
 - 发票将按照购买域名特惠包时的实付金额开具等额发票，之后使用域名特惠包抵扣的域名注册订单不再开具发票。
-- 域名特惠包**有效期为1年**，购买后当日起立即生效，到期后失效作废。
+- 域名特惠包有效期以 [域名特惠包购买页](https://buy.cloud.tencent.com/packs) 显示为准，购买后当日起立即生效，到期后失效作废。
 - 域名特惠包不支持兑现，不可跨账号使用、不可转让。
 - 域名特惠包一经使用或购买**超过5个自然日**，则不支持退款、退货。
 
