--- a/product/大数据与AI/智能合同审核/常见问题.md
+++ b/product/大数据与AI/智能合同审核/常见问题.md
@@ -5,7 +5,7 @@
 支持企业定制功能需求；您可以 [立即申请](https://cloud.tencent.com/apply/p/ubiom6c4rj)，填写企业的具体需求，我们会根据您的需求安排相应的专家进行沟通、评估后向企业提供报价。
 
 ### 智能合同审核解决方案适用于哪些行业和企业？
-智能合同审核解决方案适用于所有想提升合同处理效率及准确率的企业，让企业的管理由传统走向数字化转型，降低企业合同处理的人力成本。
+智能合同审核解决方案适用于所有想提升合同处理效率及准确率的企业，让企业的管理由传统向数字化转型，降低企业合同处理的人力成本。
 
 ### 智能合同审核解决方案包含哪些产品服务？
 智能合同审核基于 OCR、NLP 等 AI 技术，主要向企业提供合同信息提取、合同文本比对、风险审核等多项功能。
