--- a/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
+++ b/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
@@ -1,78 +1,20 @@
-腾讯安全多因子身份认证服务（以下简称为：MFAS）支持私有化交付与 SaaS 服务两种模式：
-- 如果您需要购买 MFAS，请 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 提交需求，我们将安排专人与您对接沟通，MFAS 收费规则详情请参见 [计费说明]()。
-- 如果您需要申请 MFAS 试用，或了解我们私有化方案，可通过 [申请试用](https://cloud.tencent.com/apply/p/h6yib8x1nce) 提交需求，我们将安排专人与您对接沟通。
+如果您已经购买了 MFAS，且尚未到期，您可以在 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 调整服务类型。
 
-## 计费方式
-<table>
-<thead>
-<tr>
-<th><strong>服务与产品</strong></th>
-<th><strong>服务类型</strong></th>
-<th><strong>令牌上限</strong></th>
-<th><strong>刊例价（单位：元/租户/月）</strong></th>
-<th><strong>计费模式</strong></th>
-</tr>
-</thead>
-<tbody><tr>
-<td  rowspan=6 >MFAS</td>
-<td>T300</td>
-<td>300 个移动令牌</td>
-<td>2000元/租户/月</td>
-<td  rowspan=6 >申请订阅时，按令牌量级选择订阅套餐，套餐按月收费。</td>
-</tr>
-<tr>
-<td>T500</td>
-<td>500 个移动令牌</td>
-<td>3000元/租户/月</td>
-</tr>
-<tr>
-<td>T1000</td>
-<td>1000个移动令牌</td>
-<td>4300元/租户/月</td>
-</tr>
-<tr>
-<td>T5000</td>
-<td>5000个移动令牌</td>
-<td>15000元/租户/月</td>
-</tr>
-<tr>
-<td>T10000</td>
-<td>10000个移动令牌</td>
-<td>24000元/租户/月</td>
-</tr>
-<tr>
-<td>T100000</td>
-<td>100000个移动令牌</td>
-<td>170000元/租户/月</td>
-</tr>
-<tr>
-<td>MFAS 试用</td>
-<td>T50</td>
-<td>50个移动令牌</td>
-<td>免费3个月</td>
-<td>自 <a href="https://cloud.tencent.com/apply/p/h6yib8x1nce">申请试用 </a>审批通过之日起，3个月免费。</td>
-</tr>
-<tr>
-<td>腾讯身份验证器</td>
-<td>iOS、Android</td>
-<td  rowspan=3 >-</td>
-<td  rowspan=3 >免费下载</td>
-<td>终端用户通过移动端下载平台免费下载</td>
-</tr>
-<tr>
-<td>腾讯多因子身份认证服务代理</td>
-<td  rowspan=2 >Windows、Linux</td>
-<td  rowspan=2 >通过官网 <a href="https://cloud.tencent.com/online-service?from=sales&amp;source=PRESALE">联系腾讯云服务团队</a> 获取</td>
-</tr>
-<tr>
-<td>腾讯多因子身份认证服务器插件</td>
-</tr>
-</tbody></table>
+##  升降配原则
+- 升级服务配置需要**补齐差价**，补差价规则为：按天补足差价，升配费用 = 按月升配差价 × 升配天数/(365/12) × 适用折扣。
+- 降配遵循**先退款再购买**原则：退款金额 = 资源清退退款 - 资源新购费用，若降配时计算的新配置购买金额大于旧配置退费金额，也就是退费金额为负数，此时将负数转为0，即不会退费。
+>?
+>- 如果您已经签发的令牌数量大于您希望购买的新服务类型所允许的令牌数量上限，这无法完成将配。
+>- 资源清退退款 = 支付金额 -（已使用时长 / 总时长）× 订单原价 × 适用折扣。
+>- 资源新购费用 = 降配后单价 × 降配天数/(365/12) × 适用折扣。
 
-## 计费样例
-A 公司于2021年1月1日购买了12个月的T1000服务，购买时，折扣为9.5折。假设 T300规格的售卖单价为2000元/租户/月。
-- **订单原价为**：订单原价 = 4300元/租户/月 × 12 个月 × 1个租户 = 51,600.00 元。
-- **实际支付金额为**：支付金额 = 4300元/租户/月 × 12 个月 × 9.5 折 × 1个租户 = 49,020.00 元。
+## 降配样例
+A 公司于2021年1月1日购买了12个月 T1000规格的服务，购买时，折扣为9.5折。假设 T1000规格 的售卖单价为4300元/租户/月。支付金额为：
+- 订单原价 = 4300元/租户/月 × 12 个月 × 1个租户 = 51,600.00 元。
+- 支付金额 = 4300元/租户/月 × 12 个月 × 9.5 折 × 1个租户 = 49,020.00 元。
 
+A 公司于2021年6月30日申请降配为 T500规格的服务。
+- 资源清退退款 = 49,020.00 - (181/365)× 51,600.00 × 9.5 折 = 24,711.45 元
 
-
+降配T500规格后，假设单价为3000元/租户/月，折扣为9.8折，剩余天数为184天。
+- 资源新购费用 = 3000元/租户/月 × 184/(365/12)  × 9.8 折 = 17,784.99 元。
