--- a/product/数据库/云数据库MySQL/操作指南/备份与回档/备份方式新.md
+++ b/product/数据库/云数据库MySQL/操作指南/备份与回档/备份方式新.md
@@ -34,9 +34,9 @@
 - 单节点 MySQL 实例不支持数据库备份。
 
 ## 自动备份 MySQL 数据
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/cdb)，在实例列表页，单击实例 ID 进入管理页面，选择【备份恢复】>【自动备份设置】。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/cdb)，在实例列表，单击实例 ID 进入管理页面，选择**备份恢复** > **自动备份设置**。
 ![](https://main.qcloudimg.com/raw/11a66eaae41cde48918b82ed72ec168d.png)
-2. 在弹出的备份设置对话框，选择各备份参数，单击【确定】。参数说明如下：
+2. 在弹出的备份设置对话框，选择各备份参数，单击**确定**。参数说明如下：
 >?
 >- [回档功能](https://cloud.tencent.com/document/product/236/7276) 基于备份周期和备份保留天数内的数据备份 + 日志备份（binlog），缩短自动备份频率和保留天数会影响实例数据的回档时间范围，请您权衡备份配置。
 >例如，设置备份周期为周一、周四，保留天数为7天，则可以回档到7天内（数据备份和日志有效备份实际存储时长）的任意时刻。
@@ -63,10 +63,10 @@
 >- 手动备份可在备份列表手动删除，释放掉备份空间，避免空间浪费和占用，没有手动删除的前提下会一直保留。
 >- 实例在执行每天的自动备份任务期间，无法发起手动备份。
 >
-1. 在 [实例列表](https://console.cloud.tencent.com/cdb)，单击实例 ID 进入管理页面，选择【备份恢复】>【手动备份】页。
-2. 在弹出的备份设置对话框，选择备份方式和对象，单击【确定】。
+1. 在 [实例列表](https://console.cloud.tencent.com/cdb)，单击实例 ID 进入管理页面，选择**备份恢复** > **手动备份**页。
+2. 在弹出的备份设置对话框，选择备份方式和对象，单击**确定**。
 ![](https://main.qcloudimg.com/raw/8a1361c70fc2aaf8d260e8d45fe2fbc0.png)
->?如果是逻辑备份下的单库备份或单表备份，请在左侧【选择库表】里勾选要备份的数据库或数据表，将数据库或表加入右侧列表。若您还没有数据库，请先创建数据库或表。
+>?如果是逻辑备份下的单库备份或单表备份，请在左侧**选择库表**里勾选要备份的数据库或数据表，将数据库或表加入右侧列表。若您还没有数据库，请先创建数据库或表。
 >
 ![](https://main.qcloudimg.com/raw/617cc91e5df28c6f1bffbd87519625a0.png)
 
@@ -85,7 +85,7 @@
 不可以关闭。但可以通过 [MySQL 控制台](https://console.cloud.tencent.com/cdb) 减少备份频率和删除不再使用的手动备份数据来降低备份空间的占用量。
 
 #### 4. 如何减少备份空间开销？
-- 删除不再使用的手动备份数据（手动备份可在 [MySQL 控制台](https://console.cloud.tencent.com/cdb) 的实例管理页>备份恢复页面进行删除）。 
+- 删除不再使用的手动备份数据（手动备份可在 [MySQL 控制台](https://console.cloud.tencent.com/cdb) 的实例管理页 > 备份恢复页面进行删除）。 
 - 降低非核心业务的数据自动备份频率（可在控制台调整备份周期和备份保留时间，一周至少备份2次）。
 >?[回档功能](https://cloud.tencent.com/document/product/236/7276) 基于备份周期和备份保留天数内的数据备份 + 日志备份（binlog），缩短自动备份频率和保留天数会影响实例数据的回档时间范围，请您权衡备份配置。
 >
