--- a/product/计算与网络/VPN连接/购买指南/计费概述.md
+++ b/product/计算与网络/VPN连接/购买指南/计费概述.md
@@ -44,6 +44,8 @@ VPN 网关支持两种计费模式：按流量计费和包年包月。
 <td>-</td>
 </tr>
 </tbody></table>
+>?200MB、500MB和1000MB带宽目前仅华北地区（北京）、华东地区（上海）、华南地区（广州）、西南地区（成都）、港澳台地区（香港）、华东地区（南京）和华北地区（北京金融）等可用区开放，如需请提交 [工单申请](https://console.cloud.tencent.com/workorder/category)。
+
 
 #### 计费示例
 假如某用户在北京地域购买了规格为50Mbps的 VPN 网关，计费方式为按流量计费。在07:00:00 - 07:59:59时间段，假设该用户使用流量共计5GB，则该用户在08:00:00时刻需支付费用如下：
@@ -120,7 +122,13 @@ VPN 网关支持两种计费模式：按流量计费和包年包月。
 <td>108880元</td>
 <td>-</td>
 </tr>
-</tbody></table>
+</tbody>
+</table>
+
+>?200MB、500MB和1000MB带宽仅支持新建网关，存量网关暂不支持。
+>如果 VPN 网关使用200MB、500MB和1000MB规格的带宽，VPN 通道加密协议建议使用 AES128+MD5。
+
+
 
 更多私有网络产品价格信息，请参见 [价格总览](https://cloud.tencent.com/doc/product/215/3079)。
 
