--- a/product/大数据与AI/人脸核身（云智慧眼）/接入文档/创建监控与告警/创建监控视图.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/接入文档/创建监控与告警/创建监控视图.md
@@ -2,7 +2,7 @@
 
 ## 操作场景
 
-通过云监控，您可以制定针对人脸核身产品下的 API 接口的监控视图。查看 API 接口调用量变化趋势及当前时间总调用量与昨日比例(%)。本文介绍如何配置人脸核身 API 接口监控视图，如需了解更多 Dashbord 相关信息，请参考 [Dashboard](https://cloud.tencent.com/document/product/248/46741) 相关文档。
+通过云监控，您可以制定针对人脸核身产品下的 API 接口的监控视图。查看 API 接口调用量变化趋势及当前时间总调用量与昨日比例(%)。本文介绍如何配置人脸核身 API 接口监控视图，如需了解更多 Dashboard 相关信息，请参考 [Dashboard](https://cloud.tencent.com/document/product/248/46741) 相关文档。
 
 
  ## 视图配置
