--- a/product/监控与管理/云监控/使用指南/Dashboard2.0/创建告警数据源.md
+++ b/product/监控与管理/云监控/使用指南/Dashboard2.0/创建告警数据源.md
@@ -3,7 +3,7 @@
 ## 操作步骤
 1. 登录 [云监控控制台—默认 Dashboard](https://console.cloud.tencent.com/monitor/dashboard2/default)。
 2. 切换到您需要操作的 Dashboard，进入 Dashboard 管理页。
-3. 单击**<img src="https://main.qcloudimg.com/raw/827988040ba03fd73a5a95cc942eb5cd.png"  style="margin:0;" width="3%">** > **新建图表**，进入编辑图表页。配置指标信息，说明如下：
+3. 单击<img src="https://main.qcloudimg.com/raw/827988040ba03fd73a5a95cc942eb5cd.png"  style="margin:0;" width="3%"> > **新建图表**，进入编辑图表页。配置指标信息，说明如下：
    - **选择监控类型**：选择"告警数据源"监控类型。
    - **筛选**：选择云产品监控、自定义监控、或 Prometheus 服务。
      - 云产品监控：选择“云产品监控”类型后，需选择对应的云产品，系统将会按云产品维度统计告警数量。
