--- a/product/视频服务/实时音视频/快速入门/一分钟集成SDK/快速集成(桌面浏览器).md
+++ b/product/视频服务/实时音视频/快速入门/一分钟集成SDK/快速集成(桌面浏览器).md
@@ -16,8 +16,8 @@ WebRTC 技术由 Google 最先提出，目前主要在桌面版 Chrome 浏览器
 ## URL 域名协议限制
 | 应用场景     | 协议             | 接收（播放） | 发送（上麦） | 屏幕分享 | 备注 |
 | ------------ | :--------------- | :----------- | ------------ | -------- | ---- |
-| 生产环境     | https协议        | 支持         | 支持         | 支持     | 推荐 |
-| 生产环境     | http协议         | 支持         | 不支持       | 不支持   |      |
+| 生产环境     | HTTPS 协议        | 支持         | 支持         | 支持     | 推荐 |
+| 生产环境     | HTTP 协议         | 支持         | 不支持       | 不支持   |      |
 | 本地开发环境 | http://localhost | 支持         | 支持         | 支持     | 推荐 |
 | 本地开发环境 | http://127.0.0.1 | 支持         | 支持         | 支持     |      |
 | 本地开发环境 | http://[本机IP]  | 支持         | 不支持       | 不支持   |      |
