--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -26,8 +26,8 @@
 ### 步骤3：获取 SDK 登录 Token
 开发者后台在用户鉴权通过之后，使用 [腾讯云 API3.0 SDK](https://cloud.tencent.com/document/api/679/49227) 拉取 SDK 登录 Token，返回给开发者页面用以初始化腾讯云呼叫中心 SDK。
 ### 步骤4：初始化 SDK
-开发者页面使用上一步中获取的 Token 和 URL 初始化 SDK，[示例代码](https://cloud.tencent.com/document/product/679/49749#Examples) 在 SDK快速入门 的 初始化SDK 章节已给出。
-后续的 SDK 中的接口调用参见 SDK快速入门 和 SDK API 章节即可。
+开发者页面使用上一步中获取的 Token 和 URL 初始化 SDK，[示例代码](https://cloud.tencent.com/document/product/679/49749#Examples) 在 SDK 快速入门的 [初始化SDK](https://cloud.tencent.com/document/product/679/61237) 章节已给出。
+后续的 SDK 中的接口调用参见[ SDK 快速入门](https://cloud.tencent.com/document/product/679/61237) 和 [SDK API ](https://cloud.tencent.com/document/product/679/61237)章节即可。
 
 ## 集成开发能力
 在 SDK 初始化后, 会在 Window 上注册一个名为 TCCC 的 instance。 用于外部系统集成呼叫中心的功能。TCCC 上提供了操作腾讯与呼叫中心的 API, 以及监听坐席端事件的监听注册功能。
