--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -24,12 +24,12 @@
 ### 步骤3：获取 SDK 登录 Token
 开发者后台在用户鉴权通过之后，使用 [腾讯云 API3.0 SDK](https://cloud.tencent.com/document/api/679/49227) 拉取 SDK 登录 Token，返回给开发者页面用以初始化腾讯云呼叫中心 SDK。
 ### 步骤4：初始化 SDK
-开发者页面使用上一步中获取的 Token 和 URL 初始化 SDK，[示例代码](https://cloud.tencent.com/document/product/679/49749#Examples) 在 SDK 快速入门的 [初始化SDK](https://cloud.tencent.com/document/product/679/61237) 章节已给出。
-后续的 SDK 中的接口调用参见[ SDK 快速入门](https://cloud.tencent.com/document/product/679/61237) 和 [SDK API ](https://cloud.tencent.com/document/product/679/61237)章节即可。
+开发者页面使用上一步中获取的 Token 和 URL 初始化 SDK，[示例代码](https://cloud.tencent.com/document/product/679/49749#Examples) 在 SDK 快速入门的 [初始化 SDK](https://cloud.tencent.com/document/product/679/61237#initiative) 章节已给出。
+后续的 SDK 中的接口调用参见[ SDK 快速集成](https://cloud.tencent.com/document/product/679/61237) 和 [SDK API ](#sdkAPI)章节即可。
 
 ## 集成开发能力
 在 SDK 初始化后, 会在 Window 上注册一个名为 TCCC 的 instance。 用于外部系统集成呼叫中心的功能。TCCC 上提供了操作腾讯云呼叫中心的 API, 以及监听坐席端事件的监听注册功能。
-
+[](id:initiative)
 ## SDK 初始化参数
 当 SDK 的脚本被引入浏览器的运行环境时, SDK 就会初始化, 登录，并最近呈现坐席工作台。在初始化 SDK 时，可以通过对即将插入的`<script>`标签的 dataset 进行定制以注入一些初始化参数。
 示例
@@ -54,6 +54,7 @@ function injectTCCC({token, sdkAppId, userId, sdkUrl}) {
 | userid                    | string | 当前坐席在呼叫中心中注册时是用的邮箱地址                                  |
 | showWorkBenchAtFirstLogin | bool   | 是否需要在登录是否马上打开作息工作台。为 true 时，SDK 会在初始化完成后打开坐席工作台。默认为 true。 |
 
+[](id:sdkAPI)
 ## SDK API
 TCCC SDK 提供 Call、Chat、Agent、Admin、UI 五个 namespace 分别对应电话客服、在线客服、坐席、管理和界面相关 API，使用 API 通过 tccc.namespace.api 的方式调用
 ### Call
