--- a/product/计算与网络/Serverless Framework/操作指南/多函数应用部署.md
+++ b/product/计算与网络/Serverless Framework/操作指南/多函数应用部署.md
@@ -15,7 +15,7 @@
    │   ├── package.json
    │   └── scf_bootstrap # web 类型函数启动文件，事件函数可忽视
    ├── user
-   │   ├── index.js # 主函数1
+   │   ├── index.js # 主函数2
    │   ├── package.json
    │   └── scf_bootstrap # web 类型函数启动文件，事件函数可忽视
    └── serverless.yml # yml 配置文件
@@ -24,7 +24,7 @@
 2. 在**根目录**下，创建 `serverless.yml` 文件，参考如下 yml 示例，为您的项目进行相关的参数配置。更多配置内容，请参见 [全量配置](https://github.com/serverless-components/tencent-multi-scf/blob/master/docs/configure.md)。
 ```yml
 app: multi-scf #应用名称
-component: multi-scf #组件类型，为 nulti-scf
+component: multi-scf #组件类型，为 multi-scf
 name: web_demo #实例名称，可以自定义
 
 inputs:
