--- a/product/监控与管理/云监控/故障处理/未收到告警.md
+++ b/product/监控与管理/云监控/故障处理/未收到告警.md
@@ -32,7 +32,7 @@
 
 1. 进入 [云监控控制台—告警历史]( https://console.cloud.tencent.com/monitor/history/basic) 。
 2. 查看您的短信配额是否已使用完。
-如下图显示 ”剩余 0 条可用“ ，则说明 “基础告警” 短信已使用完。每个告警类型、每用户、每月为1000条免费配额，若超过额度需继续使用短信告警，请单击**购买短信**进行短信增量。
+如下图显示 “剩余 0 条可用” ，则说明 “基础告警” 短信已使用完。每个告警类型、每用户、每月为1000条免费配额，若超过额度需继续使用短信告警，请单击**购买短信**进行短信增量。
 ![](https://main.qcloudimg.com/raw/0904dda0b03790e969cad9265cabf5cf.png)
 >?如需了解短信收费详细说明，请参考 [购买指南-短信配额](https://cloud.tencent.com/document/product/248/50131#.E7.9F.AD.E4.BF.A1.E9.85.8D.E9.A2.9D) 。
 
@@ -42,7 +42,7 @@
 
 1. 登录 [访问管理控制台](https://console.cloud.tencent.com/cam)。
 2. 在用户列表中单击对应的用户名称，进入用户详情页。
-	- 告警渠道未配置：如下图所示则说明告警渠道未配置，请单击**![](https://main.qcloudimg.com/raw/e6ecaf9389ae90463b6acefca2f30cb7.png)**进行配置，配置完后参考下文**告警渠道未验证**进行验证。
+	- 告警渠道未配置：如下图所示则说明告警渠道未配置，请单击![](https://main.qcloudimg.com/raw/e6ecaf9389ae90463b6acefca2f30cb7.png)进行配置，配置完后参考下文**告警渠道未验证**进行验证。
 		![](https://main.qcloudimg.com/raw/09db0d6796799179c4985e037d54334e.png)
 	- 告警渠道未验证：如下图所示则说明告警渠道未验证，请单击认证。
 		![](https://main.qcloudimg.com/raw/373304167be3ea7932c873fde953ff77.png)
@@ -82,7 +82,7 @@
 
 例如：设置指标为 CPU 利用率 、比较关系为 > 、阈值为80% 、统计粒度为5分钟 、持续周期为2个周期。 表示：每5分钟收集一次 CPU 利用率数据，若某台云服务器的 CPU 利用率**连续两次**大于80%则触发告警。 以此类推，设置持续周期为 N，则需要指标监控数据 N 次达到阈值才会产生告警。
 
-您可以登录 [云监控控制台](https://console.cloud.tencent.com/monitor)，选择对应的云产品，单击**<img src="https://main.qcloudimg.com/raw/913709c7fa409d62518bf58e23c95446.png" width="2.7%">**查看指标监控数据，通过时间筛选器确认指标监控数据是否达到触发告警条件，未达到则不发送告警通知。
+您可以登录 [云监控控制台](https://console.cloud.tencent.com/monitor)，选择对应的云产品，单击<img src="https://main.qcloudimg.com/raw/913709c7fa409d62518bf58e23c95446.png" width="2.7%">查看指标监控数据，通过时间筛选器确认指标监控数据是否达到触发告警条件，未达到则不发送告警通知。
 
 如下图所示：查看云服务器 CPU 利用率。 
 ![img](https://main.qcloudimg.com/raw/0aee90163446d499dbd6b319caf5b680.png)
