--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
@@ -11,3 +11,8 @@
 ![](https://main.qcloudimg.com/raw/18758c0538c0ec5210b1ae4263249ef4.png)
 3. 单击**新建用户**即可开始新建用户，其中，用户名、用户组、密码为必填项，备注为选填项。
 ![](https://main.qcloudimg.com/raw/c6dd4df5d3711fd4f6ad1baaa4927dfe.png)
+4. 手动触发 ranger-ugsync-site.xml 的配置下发，并重启服务。
+ - 登录弹性 MapReduce 控制台，在集群列表中选择对应的集群单击集群服务进入集群服务列表。
+ - 在集群服务列表中，选择 Ranger 服务面板右上角**操作 > 配置管理**。
+ - 进入配置管理页后，选择 ranger-ugsync-site.xml 配置文件，单击**修改配置**后，无需修改配置；单击**保存配置**，然后在弹窗中选择保存并下发。
+ - 返回角色管理页面，选择 RangerUsersync 服务并点击重启服务。
