--- a/product/数据库/数据库审计/操作指南/查看审计日志.md
+++ b/product/数据库/数据库审计/操作指南/查看审计日志.md
@@ -1,5 +1,5 @@
 
-## 查看审计日志
+## 查看日志
 1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)、[TDSQL-C 控制台](https://console.cloud.tencent.com/dls/cynosdb/instance) 或  [MongoDB 控制台](https://console.cloud.tencent.com/dls/mongodb)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计日志**页。
 2. 在**审计日志**页的审计实例处，选择已经开启审计的数据库实例，即可查看对应的 SQL 审计日志。或在**审计实例**页，单击已开启审计的实例 ID，跳转至**审计日志**页查看对应日志。
 >?审计日志展示时间扩展到毫秒，便于对 SQL 进行更精确的排序和问题分析。
