--- a/product/存储与CDN/内容分发网络/操作指南/实时日志.md
+++ b/product/存储与CDN/内容分发网络/操作指南/实时日志.md
@@ -1,3 +1,12 @@
+<blockquote class="d-mod-alarm">
+              <div class="d-mod-title d-alarm-title">
+                <i class="d-icon-alarm"></i>公告：
+              </div>
+               <p>CDN 官网通用日志字段 - HTTP 协议标识（实时日志proto字段）将增加值“HTTP/3”，此变更将于 2021-09-13 起灰度发布，不会影响控制台及接口的数据监控统计，若您使用离线日志下载包进行数据统计，请关注并确认具体影响，按需调整。非常感谢您的理解与配合，谢谢！</p>
+            </blockquote>
+
+
+
 ## 功能介绍
 
 内容分发网络（CDN）通过对 CDN 访问日志的实时采集与推送，可实现对日志数据的快速检索与分析。您可通过 CDN 控制台一站式快捷接入，享受从日志采集、日志存储到日志检索等全方位稳定可靠的日志服务。
