--- a/product/数据库/数据库审计/产品动态.md
+++ b/product/数据库/数据库审计/产品动态.md
@@ -1,23 +1,27 @@
-## 2021年09月
+## 2021年08月
 <table>
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
 <td>账单支持展示项目组信息</td>
 <td>导出的账单中，会展示数据库实例对应的项目组信息，便于通过使用项目组对账单进行分类统计。</td>
-<td>2021-09</td><td><a href="https://console.cloud.tencent.com/expense/bill/overview" target="_blank">费用账单</a></td></tr>
+<td>2021-08</td><td><a href="https://console.cloud.tencent.com/expense/bill/overview" target="_blank">费用账单</a></td></tr>
 <tr>
 <td>增加实例名展示</td>
 <td>实例列表原“实例ID”列变更为“实例 ID / 名称”列，新增实例名称显示，便于快速定位实例。</td>
-<td>2021-09</td><td>-</td></tr>
-<tr>
-<td> </td>
-<td>  。</td>
-<td>2021-09</td><td>-</td></tr>
-<tr>
-<td> </td>
-<td> 。</td>
-<td>2021-09</td><td><a href=" " target="_blank"> 1</a></td></tr>
+<td>2021-08</td><td>-</td></tr>
+<td>支持 MongoDB 审计</td>
+<td>腾讯云为云数据库 MongoDB提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。</td>
+<td>2021-08</td><td><a href="https://cloud.tencent.com/document/product/672/61273" target="_blank">开通云数据库 MongoDB 审计</a></td></tr>
+</tbody></table>
+
+## 2021年0月
+<table>
+<tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
+<tbody>
+<td>支持 TDSQL-C 审计</td>
+<td>腾讯云为云原生数据库 TDSQL-C（兼容 MySQL 版）提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。</td>
+<td>2021-0</td><td><a href="https://cloud.tencent.com/document/product/672/55454" target="_blank">开通云原生数据库 TDSQL-C 审计</a></td></tr>
 </tbody></table>
 
 ## 20XX年XX月
