--- a/product/物联网/物联网智能视频服务（行业版）/操作指南/存储回放/存储管理.md
+++ b/product/物联网/物联网智能视频服务（行业版）/操作指南/存储回放/存储管理.md
@@ -10,31 +10,31 @@
 ### 查看录像文件
 
 在左侧设备栏选择需要查看的通道，即可查看该通道的云端录像视频文件。
-![](https://main.qcloudimg.com/raw/127e8a2904a77d1f6b2c78f8e2a9de8f.png)
+![](https://main.qcloudimg.com/raw/e03d4610882191662f60ac39af664cf1.png)
  
 
 ### 修改过期时间
 
 对需要修改的文件，选择**操作** > **编辑**，可修改文件的过期时间。或选中需要修改的文件，单击编辑按钮，可批量修改文件的过期时间。
-![](https://main.qcloudimg.com/raw/43771b6c13c5c71dba39fd427741a5bb.png)
+![](https://main.qcloudimg.com/raw/59b9a007fd898af8cd8cd407f6560fb4.png)
 
  
 
 ### 视频预览
 
 对于需要预览的视频文件，单击**预览**，可查看观看该视频。
-![](https://main.qcloudimg.com/raw/ef8c5bd9b19ffb3933aebba3f8dd428f.png)
+<img src="https://main.qcloudimg.com/raw/ef8c5bd9b19ffb3933aebba3f8dd428f.png" width="832px">
 
  
 
 ### 删除视频
 
 对于需要删除的文件，选择**操作** > **删除**，可删除该文件。或勾选中需要删除的文件，单击**删除**按钮，可批量删除视频文件。
-![](https://main.qcloudimg.com/raw/5e623a8747ffa169007b0e060c5d73d0.png)
+![](https://main.qcloudimg.com/raw/025c7724498fa9c4f819cfa3e754d194.png)
 
  
 
 ### 下载视频
 
 对于需要下载的文件，选择**操作** > **下载**，可下载该文件。或勾选中需要下载的文件，单击**下载**按钮，可批量下载视频文件。
-![](https://main.qcloudimg.com/raw/bfaf05b4bce6234876eb4907d79c90f7.png)
+![](https://main.qcloudimg.com/raw/16b882e4720fd5f2b8e8afa6c2a03ba1.png)
