--- a/product/视频服务/播放器/快速入门/快速入门.md
+++ b/product/视频服务/播放器/快速入门/快速入门.md
@@ -9,15 +9,15 @@
 <tr><th>播放器</th><th>说明</th><th>参考文档</th></tr>
 <tr>
 <td>超级播放器 TCPlayer</td>
-<td>超级播放器 TCPlayer 适用于点播播放场景，可结合腾讯云点播业务使用，使用时需提供云点播控制台的 FileID 和您的 AppID，它们是点播超级播放器播放视频时最基本的要求信息。TCPlayer 基于 video.js 框架构建，提供全面、强大的视频播放能力。</td>
+<td>适用于点播播放场景，可结合腾讯云点播业务使用，使用时需提供云点播控制台的 FileID 和您的 AppID，它们是点播超级播放器播放视频时最基本的要求信息。TCPlayer 基于 video.js 框架构建，提供全面、强大的视频播放能力。</td>
 <td><a href="https://cloud.tencent.com/document/product/881/30818">使用文档</a></td>
 </tr><tr>
 <td>超级播放器 TCPlayerLite</td>
-<td>超级播放器 TCPlayerLite 是一款轻量级播放器，仅支持传入地址播放，不关联业务，适用于轻量化 Web 视频播放场景，支持点播和直播。TCPlayerLite 采用 HTML5 和 Flash 相结合的播放模式，提供基础播放功能。</td>
+<td>是一款轻量级播放器，仅支持传入地址播放，不关联业务，适用于轻量化 Web 视频播放场景，支持点播和直播。TCPlayerLite 采用 HTML5 和 Flash 相结合的播放模式，提供基础播放功能。</td>
 <td><a href="https://cloud.tencent.com/document/product/881/20207">使用文档</a></td>
 </tr><tr>
 <td>超级播放器 Adapter</td>
-<td>超级播放器 Adapter 为云点播提供给客户希望使用第三方播放器或自研播放器开放的对接云 PaaS 资源的播放器插件，常用于有强烈自定义播放器功能需求的用户，有一定的技术接入门槛。</td>
+<td>为云点播提供给客户希望使用第三方播放器或自研播放器开放的对接云 PaaS 资源的播放器插件，常用于有强烈自定义播放器功能需求的用户，有一定的技术接入门槛。</td>
 <td><a href="https://cloud.tencent.com/document/product/881/30824">使用文档</a></td>
 </tr></table>
 
@@ -30,7 +30,7 @@
 <tr><th width=14%>播放器</th><th>说明</th><th width=27%>参考文档</th></tr>
 <tr>
 <td>超级播放器</td>
-<td>超级播放器适用于直播和点播，是集视频信息拉取、横竖屏切换、清晰度选择、弹幕、直播时移、小窗播放等功能于一体的解决方案标组件，且完全开源。帮助您在短时间内，打造一个媲美市面上各种流行视频 App 的播放软件。</td>
+<td>适用于直播和点播，是集视频信息拉取、横竖屏切换、清晰度选择、弹幕、小窗播放等功能于一体的解决方案标组件，且完全开源。帮助您在短时间内，打造一个媲美市面上各种流行视频 App 的播放软件。</td>
 <td><ul style="margin:0">
     <li/><a href="https://cloud.tencent.com/document/product/881/20208">iOS 超级播放器</a> 
     <li/><a href="https://cloud.tencent.com/document/product/881/20213">Android 超级播放器</a> 
@@ -38,14 +38,14 @@
 </ul></td>
 </tr><tr>
 <td>超级播放器 Adapter</td>
-<td>超级播放器 Adapter 为云点播提供给客户希望使用第三方播放器或自研播放器开发的对接云 PaaS 资源的播放器插件，常用于有自定义播放器功能需求的用户，有一定的技术接入门槛。</td>
+<td>为云点播提供给客户希望使用第三方播放器或自研播放器开发的对接云 PaaS 资源的播放器插件，常用于有自定义播放器功能需求的用户，有一定的技术接入门槛。</td>
 <td><ul style="margin:0">
     <li/><a href="https://cloud.tencent.com/document/product/881/20209">iOS 超级播放器 Adapter</a>
     <li/><a href="https://cloud.tencent.com/document/product/881/20214">Android 超级播放器 Adapter</a>
 </ul></td>
 </tr><tr>
 <td>定制开发</td>
-<td>超级播放器提供了最通用的播放器功能，如果不能满足需求，您可以自行修改播放代码。<br>如果您对播放的定制不仅限于 UI，需要进行更深层次的定制，您可以参考定制开发内容，了解播放器更底层的用法。</td>
+<td>提供了最通用的播放器功能，如果不能满足需求，您可以自行修改播放代码。<br>如果您对播放的定制不仅限于 UI，需要进行更深层次的定制，您可以参考定制开发内容，了解播放器更底层的用法。</td>
 <td><ul style="margin:0">
 	<li/><a href="https://cloud.tencent.com/document/product/881/20210">iOS 定制开发</a> 
 	<li/><a href="https://cloud.tencent.com/document/product/881/20215">Android 定制开发</a>
