--- a/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
+++ b/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
@@ -2,8 +2,6 @@
 - 如果您需要购买 MFAS，请 [联系我们](https://cloud.tencent.com/online-service?from=sales&source=PRESALE) 提交需求，我们将安排专人与您对接沟通，MFAS 收费规则详情请参见 [计费说明]()。
 - 如果您需要申请 MFAS 试用，或了解我们私有化方案，可通过 [申请试用](https://cloud.tencent.com/apply/p/h6yib8x1nce) 提交需求，我们将安排专人与您对接沟通。
 
-## 计费方式
-
 <table>
 <tr><th width=20%><strong>服务与产品</strong></th><th width=12%><strong>服务类型</strong></th><th width=20%><strong>令牌上限</strong></th><th width=20%><strong>刊例价（单位：元/租户/月）</strong></th><th width=20%><strong>计费模式</strong></th></tr>
 <tbody><tr>
@@ -57,7 +55,7 @@
 </tr>
 </tbody></table>
 
-## 计费样例
+#### 计费样例
 A 公司于2021年1月1日购买了12个月的T1000服务，购买时，折扣为9.5折。假设 T300规格的售卖单价为2000元/租户/月。
 - **订单原价为**：订单原价 = 4300元/租户/月 × 12 个月 × 1个租户 = 51,600.00 元。
 - **实际支付金额为**：支付金额 = 4300元/租户/月 × 12 个月 × 9.5 折 × 1个租户 = 49,020.00 元。
